# avr-and-things

./: .gitignore
avr-port/: Cargo.toml  README.md
avr-port/src/: lib.rs
basic-avr-rust/: Cargo.toml  Makefile  README.md  Ravedude.toml  avr-atmega328p.json  generate_reports.sh
basic-avr-rust/.cargo/: config.toml
basic-avr-rust/common/: crt.s  makefile
basic-avr-rust/src/: main.rs  port.rs  timer.rs
